# omnix-lang

./: ANNOUNCEMENTS.md  CHANGELOG.md  Cargo.toml  DISTRIBUTED_FEATURES_SUMMARY.md  Dockerfile  ENHANCEMENT_SUMMARY.md  MANUAL_PUBLISHING_STEPS.md  Makefile  OMNIX_COMPLETE_SUMMARY.md  OMNIX_ORCHESTRATOR_SUMMARY.md  PUBLISHER_DETAILS.md  PUBLISHING_GUIDE.md  README.md  ROADMAP.md  demo.sh  docker-compose.yml  language-configuration.json  package-lock.json  package.json  setup.py  test_demo.sh  tsconfig.json
.github/workflows/: ci.yml
cli/: omnix-cli.js  package.json
compiler/: Cargo.toml  test.omx
compiler/src/: ast.rs  error.rs  interpreter.js  lexer.js  lexer.rs  lib.rs  omnix.js  parser.js  parser.rs  pratt.rs  token.rs
compiler/tests/: parse_tests.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
docs/: grammar.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  hello-world.md  installation.md  introduction.md
examples/: blockchain_consensus.omx  counter_cluster.omx  counter_cluster_mvp.omx  cross_chain_dex.omx  distributed_kv_store.omx  distributed_pipeline.omx  simple_cross_chain.omx  simple_pipeline.omx  test_distributed.omx
images/: generate-icons.html
networking/: Cargo.toml
networking/src/: lib.rs
omnix-orchestrator/: BUSINESS_PLAN.md  README.md  index.js  package.json  premium-orchestrator.js  server.js  test-pipeline.js
omnix-orchestrator/adapters/: base-adapter.js  index.js  javascript-adapter.js  python-adapter.js  sql-adapter.js
omnix-orchestrator/collaboration/: team-manager.js
omnix-orchestrator/distributed/: distributed-executor.js
omnix-orchestrator/engine/: pipeline-executor.js
omnix-orchestrator/ide/: graph-editor.html
omnix-orchestrator/licensing/: license-manager.js
omnix-orchestrator/metrics/: usage-tracker.js
playground/: index.html
python/omnix/: __init__.py  compiler.py  lexer.py  parser.py
runtime/: Cargo.toml
runtime/src/: consensus.rs  crdt.rs  http_api.rs  lib.rs  network.rs  network_impl.rs  raft.rs  runtime.rs  state.rs
server/: package-lock.json  package.json  tsconfig.json
server/src/: server.js.map  server.ts
snippets/: omnix.json
src/: extension-lsp.ts  extension.ts  main.rs
syntaxes/: omnix.tmLanguage.json
tests/: integration_test.rs
