[package]
name = "omnix-lang"
version = "0.1.0"
edition = "2021"
authors = ["OMNIX Language Team <team@omnixlang.org>"]
license = "Apache-2.0"
description = "OMNIX: The Distributed Consensus Programming Language"

[workspace]
members = [
    "compiler",
    "runtime",
    "consensus",
    "networking",
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

omnix-compiler = { path = "compiler" }
omnix-runtime = { path = "runtime" }

[[bin]]
name = "omnix"
path = "src/main.rs"
